apps/prod/dashboard/ingress.yaml
# /apps/prod/dashboard/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: dashboard
  namespace: dashboard
spec:
  entryPoints:
    - websecure
  routes:
  - match: Host(`${K8S_DASHBOARD_DOMAIN}`)
    kind: Rule
    middlewares:
      - name: auth-authelia@kubernetescrd
    services:
    - name: dashboard-headlamp
      port: 80
      namespace: dashboard
